--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
 		<meta property="og:type" content="website">
 		<meta property="og:description" content="Get all champion's stats you need to improve your game on Battlerite">
 		<meta property="og:url" content="http://battlerite-pro.com/">
-		<meta property="og:image" content="battlerite.png">
+		<meta property="og:image" content="battlerite.jpg">
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:creator" content="@charlottecady">
 		<meta name="twitter:title" content="Battlerite Pro | Statistics">
