reduction des images banner

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,5 +35,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <noscript>Your browser does not support JavaScript!</noscript>
   </body>
 </html>
